--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,7 @@
 :root {
   --white: #ffffff;
   --black: #0b0b0c;
-  --dark-purple: #200120;
+  --dark-purple: #180423;
   --light-purple: #3f33cc;
   --pink: #ff00d9;
   --light-blue: #5beaf7;
@@ -17,7 +17,7 @@
 
 @font-face {
   font-family: "Alien Encounters";
-  src: url("../assets/fonts/Alien-Encounters-Regular.ttf");
+  src: url("../assets/fonts/Alien_Encounters_Regular.ttf");
 }
 
 @font-face {
@@ -27,12 +27,12 @@
 
 @font-face {
   font-family: "Outrun future";
-  src: url("../assets/fonts/Outrun\ future.otf");
+  src: url("../assets/fonts/Outrun_future.otf");
 }
 
 @font-face {
   font-family: "Rocket Rinder";
-  src: url("../assets/fonts/Rocket\ Rinder.otf");
+  src: url("../assets/fonts/Rocket_Rinder.otf");
 }
 
 * {
@@ -59,7 +59,6 @@ body {
   min-height: 7rem;
   padding: 5px 15px;
   background: none;
-  /* border: 1px solid red; */
 }
 
 .header__logo {
@@ -89,7 +88,6 @@ body {
   height: 100vh;
   width: 70%;
   padding: 20px 10px;
-  /* background: rgb(98, 0, 84); */
   background: linear-gradient(
     90deg,
     rgba(98, 0, 84, 0.5) 0%,
@@ -165,56 +163,132 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: baseline;
-  padding-top: 200px;
+  padding-top: 150px;
   background: url("../assets/images/hero_background.jpg");
   background-position: left;
   background-size: cover;
 }
 
-.hero__title-container {
-  position: relative;
+.hero__article {
   display: flex;
+  position: relative;
+  width: 100%;
+}
+
+.hero_article--secondary {
+  display: none;
+  position: absolute;
+}
+
+.hero__title-container {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: fit-content;
+  width: 100%;
 }
 
 .hero__main-title {
   z-index: 2;
-  font-size: 6rem;
+  position: absolute;
+  top: 120px;
+  font-size: 10rem;
   font-weight: 500;
   font-family: "Alien Encounters";
-  /* transform: rotate(-20deg); */
-  text-shadow: 0px 0px 20px var(--pink), 0px 0px 30px var(--pink),
-    0px 0px 60px var(--pink);
+  line-height: 8rem;
+  text-align: center;
+  letter-spacing: 0.5rem;
+  text-shadow: 0px 0px 10px var(--light-blue), 0px 0px 20px var(--light-blue),
+    0px 0px 40px var(--light-blue);
 }
-.hero__main-title--gradient {
-  background: -webkit-linear-gradient(
-    45deg,
-    rgb(255, 255, 255),
-    rgb(150, 150, 150)
-  );
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: white;
+
+.hero__main-greeting {
+  position: absolute;
+  top: -90px;
+  font-family: "Streamster";
+  font-size: 4rem;
+  transform: rotate(-10deg);
+  color: var(--white);
+  text-shadow: 0px 0px 5px var(--pink), 0px 0px 10px var(--pink),
+    0px 0px 20px var(--pink), 0px 0px 40px var(--pink);
+}
+
+.hero_article--secondary .hero__main-greeting {
+  position: absolute;
+  top: -90px;
+  left: 10px;
+  font-family: "Streamster";
+  font-size: 4rem;
+  transform: rotate(-10deg);
+  color: var(--white);
+  text-shadow: 0px 0px 5px var(--pink), 0px 0px 10px var(--pink),
+    0px 0px 20px var(--pink), 0px 0px 40px var(--pink);
 }
 
 .hero__main-title--secondary {
   position: absolute;
-  left: 120px;
-  top: 60px;
+  left: 150px;
+  top: 120px;
   font-family: "Streamster";
-  font-size: 5rem;
-  /* transform: rotate(-20deg); */
+  font-size: 6.5rem;
+  transform: rotate(-10deg);
   color: var(--white);
-  text-shadow: 0px 0px 20px var(--light-blue), 0px 0px 30px var(--light-blue),
-    0px 0px 60px var(--light-blue);
+  text-shadow: 0px 0px 5px var(--pink), 0px 0px 10px var(--pink),
+    0px 0px 20px var(--pink), 0px 0px 40px var(--pink);
 }
 
-.hero__triangle {
+.hero_article--secondary .hero__main-title--secondary {
   position: absolute;
-  transform: rotate(-5deg);
-  z-index: 1;
-  width: 0;
-  height: 0;
-  border-left: 100px solid transparent;
-  border-right: 250px solid transparent;
-  border-top: 200px solid rgb(156, 41, 125);
+  left: 210px;
+  top: 120px;
+  font-family: "Streamster";
+  font-size: 6.5rem;
+  color: var(--white);
+  text-shadow: 0px 0px 5px var(--pink), 0px 0px 10px var(--pink),
+    0px 0px 20px var(--pink), 0px 0px 40px var(--pink);
+  transform: rotate(-10deg);
+}
+
+.hero__scroll-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom: 10px;
+  width: 80%;
+  height: 100%;
+}
+
+.hero__scroll-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 40px;
+  margin-bottom: 10px;
+  color: var(--white);
+  font-family: "Alien Encounters";
+  text-decoration: none;
+  font-size: 1.6rem;
+  text-shadow: 0px 0px 5px var(--light-blue), 0px 0px 10px var(--light-blue),
+    0px 0px 20px var(--light-blue), 0px 0px 40px var(--light-blue);
+  border: 1px solid var(--white);
+  border-radius: 20px;
+  box-shadow: 0px 0px 30px 1px var(--light-blue),
+    inset 0px 0px 20px 1px var(--light-blue);
+}
+
+.hero__scroll-arrow-down {
+  width: 10%;
+  margin: 3px;
+  filter: drop-shadow(0px 0px 10px var(--light-blue))
+    drop-shadow(0px 0px 20px var(--light-blue))
+    drop-shadow(0px 0px 30px var(--light-blue))
+    drop-shadow(0px 0px 50px var(--light-blue));
+}
+
+.about {
+  height: 100vh;
 }
