--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,7 @@
   --light-purple: #3f33cc;
   --pink: #ff00d9;
   --light-blue: #5beaf7;
+  --text-white: #ced0d9;
 }
 
 @font-face {
@@ -48,6 +49,38 @@ html {
 body {
   background: var(--dark-purple);
   color: var(--white);
+}
+
+.heading {
+  margin: 5px 10px;
+  font-weight: 500;
+}
+
+.heading_s {
+  font-size: 3.2rem;
+}
+
+.heading_m {
+  font-size: 3.6rem;
+}
+
+.heading_l {
+  font-size: 4.2rem;
+}
+
+.heading_streamster {
+  font-family: "Streamster";
+}
+
+.heading_alien_encounters {
+  font-family: "Alien Encounters";
+}
+
+.paragraph {
+  font-size: 1.8rem;
+  font-weight: 400;
+  font-family: "Quicksand", sans-serif;
+  color: var(--text-white);
 }
 
 .header {
@@ -290,5 +323,63 @@ body {
 }
 
 .about {
+  display: flex;
   height: 100vh;
+  justify-content: center;
+  align-self: center;
+}
+
+.about__container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  height: fit-content;
+  margin: 40px 10px;
+  padding: 40px 20px;
+  border: 1px solid var(--white);
+  border-radius: 10px;
+  background: linear-gradient(
+    140deg,
+    rgba(105, 13, 91, 0.5) 0%,
+    rgba(52, 0, 52, 0.5) 25%,
+    rgba(8, 75, 87, 0.5) 100%
+  );
+  box-shadow: 0px 0px 40px 1px var(--light-blue);
+  /* backdrop-filter: blur(10px); */
+}
+
+.about__heading {
+  position: absolute;
+  top: -40px;
+  left: 20px;
+  font-size: 4.8rem;
+  text-shadow: 0px 0px 5px var(--pink), 0px 0px 10px var(--pink),
+    0px 0px 20px var(--pink), 0px 0px 40px var(--pink);
+}
+
+.about__technologies-used {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0px;
+}
+
+.about__technologies-logos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  height: fit-content;
+  margin-top: 5px;
+}
+
+.technology-logo {
+  width: 22%;
+  border-radius: 15px;
+  margin-top: 35px;
+  filter: drop-shadow(0px 0px 15px var(--light-blue))
+    drop-shadow(0px 0px 20px var(--light-blue));
+  /* drop-shadow(0px 0px 30px var(--light-blue)); */
+  /* drop-shadow(0px 0px 50px var(--light-blue)); */
 }
