--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,8 @@
   --pink: #ff00d9;
   --light-blue: #5beaf7;
   --text-white: #ced0d9;
+  --dark-purple-gradient: #1804234d;
+  --light-blue-gradient: #03242f81;
 }
 
 @font-face {
@@ -70,7 +72,7 @@ body {
 }
 
 .heading {
-  margin: 5px 0px;
+  margin: 5px 0px 10px 0px;
   font-weight: 500;
 }
 
@@ -372,8 +374,8 @@ body {
   background: linear-gradient(
     140deg,
     rgba(128, 16, 111, 0.5) 0%,
-    rgba(52, 0, 52, 0.5) 30%,
-    rgba(70, 8, 87, 0.5) 100%
+    rgba(34, 0, 34, 0.5) 40%,
+    rgba(71, 8, 89, 0.5) 100%
   );
   box-shadow: 0px 0px 40px 1px var(--light-blue);
   /* backdrop-filter: blur(10px); */
@@ -410,15 +412,31 @@ body {
 }
 
 .experience {
+  position: relative;
   flex-direction: column;
+  background: linear-gradient(
+    180deg,
+    var(--dark-purple),
+    var(--dark-purple-gradient) 100%
+  );
+}
+
+.experience::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url("../assets/images/black_hole_lines_blue.png");
+  background-position: center;
+  opacity: 0.2;
 }
 
 .experience__title-container {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .experience__companies-description {
-  margin-top: 10px;
 }
 
 .experience_companies {
@@ -462,6 +480,7 @@ body {
   top: 0;
   left: 5px;
   font-size: 2.2rem;
+  line-height: 20px;
   color: var(--white);
   text-shadow: 0px 0px 10px var(--pink), 0px 0px 15px var(--pink);
 }
