--- a/src/css/style.css
+++ b/src/css/style.css
@@ -380,6 +380,10 @@ body {
     drop-shadow(0px 0px 50px var(--light-blue));
 }
 
+.about {
+  padding: 100px 0px 0px 0px;
+}
+
 .about__container {
   position: relative;
   display: flex;
