--- a/src/css/style.css
+++ b/src/css/style.css
@@ -255,6 +255,14 @@ body {
   background-size: cover;
 }
 
+.hero::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(0deg, var(--dark-purple), #18042300 25%);
+}
+
 .hero__article {
   display: flex;
   position: relative;
