--- a/src/css/desktop-s.css
+++ b/src/css/desktop-s.css
@@ -1,7 +1,3 @@
-.hidden {
-  display: none;
-}
-
 .header {
   width: 100%;
 }
@@ -14,6 +10,7 @@
 
 .section {
   padding: 0px 150px;
+  /* height: 100vh; */
 }
 
 .header__container {
@@ -80,20 +77,15 @@
   border: 1px solid var(--pink);
 }
 
-.hero {
-}
-
 .hero::before {
   background: linear-gradient(180deg, var(--dark-purple), #18042300 80%),
     linear-gradient(0deg, var(--dark-purple), #18042300 50%);
 }
 
 .hero__article {
-  width: 40%;
+  width: 38%;
   min-width: 420px;
-}
-
-.hero__article-triangle-background {
+  max-width: 425px;
 }
 
 .hero__main-title {
