--- a/src/css/style.css
+++ b/src/css/style.css
@@ -156,6 +156,14 @@ body {
   border-radius: 10px;
   font-family: "Quicksand", sans-serif;
   font-size: 1.4rem;
+  background: linear-gradient(
+    135deg,
+    rgba(120, 0, 102, 0.559) 10%,
+    rgba(56, 0, 56, 0.5) 35%,
+    rgba(87, 4, 87, 0.587) 100%
+  );
+  box-shadow: 0px 0px 10px 1px var(--pink);
+  backdrop-filter: blur(10px);
 }
 
 .header {
@@ -513,14 +521,6 @@ body {
 }
 
 .experience__work-status {
-  background: linear-gradient(
-    135deg,
-    rgba(120, 0, 102, 0.559) 10%,
-    rgba(56, 0, 56, 0.5) 35%,
-    rgba(87, 4, 87, 0.587) 100%
-  );
-  box-shadow: 0px 0px 10px 1px var(--pink);
-  backdrop-filter: blur(10px);
 }
 
 .experience__companies-description {
@@ -588,6 +588,7 @@ body {
   background-image: url("../assets/images/synthwave_background_2.jpg");
   background-repeat: no-repeat;
   background-position: top;
+  background-size: cover;
   opacity: 0.5;
 }
 
@@ -683,7 +684,6 @@ body {
 
 .contact {
   padding: 50px 0px;
-  /* padding-bottom: 50px; */
   position: relative;
   background: linear-gradient(
       180deg,
@@ -702,6 +702,7 @@ body {
   background-image: url("../assets/images/synthwave_background.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
   opacity: 0.6;
 }
 
@@ -738,8 +739,10 @@ body {
 }
 
 .contact__form-text-area {
-  width: inherit;
+  width: 100%;
   height: inherit;
+  max-width: 100%;
+  max-height: 300px;
 }
 
 .contact__email {
