--- a/src/css/desktop.css
+++ b/src/css/desktop.css
@@ -269,3 +269,33 @@
 .contact__email {
   margin-top: 25px;
 }
+
+.footer__socials {
+  width: 40%;
+}
+
+.footer__social-logo {
+  margin-top: 15px;
+  width: 40px;
+}
+
+.logo_m {
+  width: 45px;
+}
+
+.footer__github-stats-container {
+  margin-top: 10px;
+}
+
+.footer__github-paragraph {
+  font-size: 1.6rem;
+}
+
+.footer__github-stat {
+  font-size: 2.2rem;
+  letter-spacing: 1px;
+}
+
+.footer__github-icon {
+  width: 20px;
+}
