--- a/src/css/desktop.css
+++ b/src/css/desktop.css
@@ -217,8 +217,8 @@
 
 .youtube__videos-carrousel-container {
   width: 70%;
-  min-width: 700px;
-  min-height: fit-content;
+  max-width: 1100px;
+  min-height: 500px;
 }
 
 .youtube__video-card {
