--- a/src/css/desktop-s.css
+++ b/src/css/desktop-s.css
@@ -13,6 +13,11 @@
   height: 100vh;
 }
 
+.article {
+  min-width: 800px;
+  max-width: 900px;
+}
+
 .paragraph {
   font-size: 1.6rem;
 }
@@ -35,6 +40,7 @@
 
 .header__logo {
   width: 90%;
+  min-width: 110px;
 }
 
 .header__burger-icon {
@@ -46,6 +52,7 @@
   justify-content: flex-end;
   align-items: center;
   width: 60%;
+  min-width: 600px;
 }
 
 .desktop-menu__list {
@@ -119,11 +126,11 @@
 }
 
 .hero__scroll-button-container {
-  width: 30%;
+  width: 40%;
 }
 
 .hero__scroll-arrow-down {
-  width: 6%;
+  width: 5%;
 }
 
 .about {
@@ -132,6 +139,8 @@
 
 .about__content-container {
   width: 95%;
+  min-width: 700px;
+  max-width: 900px;
   margin-top: 100px;
   padding: 50px 30px;
 }
@@ -181,7 +190,8 @@
 }
 
 .youtube__videos-carrousel-container {
-  width: 100%;
+  width: 95%;
+  min-width: 700px;
   max-width: 1100px;
   min-height: 400px;
 }
